k8s/paralog-python-api/base/istio/authorizationpolicy/allow-ingress-authorization-policy.yaml

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-paralog-pro-python-api
spec:
  selector:
    matchLabels:
      io.kompose.service: paralog-pro-python-api
  action: ALLOW
  rules:
    - from:
        - source:
            principals : ["PLACE_HOLDER"]
      to:
        - operation:
            methods: ["GET","POST"]
